# glyphosate_resistant

./: .gitignore  README.ipynb  README.md  environment.yml  hello.py  pyproject.toml  requirements.txt
data/downloads/ASD_taxa/Adlercreutzia_equolifaciens/: GCA_048534465.1_ASM4853446v1_genomic.faa
data/downloads/ASD_taxa/Akkermansia_sp_KLE1798/: GCF_001580195.1_ASM158019v1_protein.faa
data/downloads/ASD_taxa/Alistipes_ihumii/: GCF_048529925.1_ASM4852992v1_protein.faa
data/downloads/ASD_taxa/Alistipes_putredinis/: GCF_046603865.1_ASM4660386v1_protein.faa
data/downloads/ASD_taxa/Alistipes_shahii/: GCF_045070525.1_ASM4507052v1_protein.faa
data/downloads/ASD_taxa/Anaerobutyricum_hallii/: GCA_048485215.1_ASM4848521v1_genomic.faa
data/downloads/ASD_taxa/Bacteroides_caccae/: GCF_964283495.1_CC01448_protein.faa
data/downloads/ASD_taxa/Bacteroides_fragilis/: GCA_050845875.1_ASM5084587v1_protein.faa
data/downloads/ASD_taxa/Bacteroides_intestinalis/: GCA_048507615.1_ASM4850761v1_genomic.faa
data/metadata/: Internal_meta_diet.txt
data/processed/: full_collapsed_abundance.csv  species_ec.csv  species_ec_remapped.tsv  species_full_abundance_table.csv  species_top100_abundance_table.csv  top_species_ASD.tsv  top_species_Control.tsv  top_species_all.tsv
data/raw/: Internal2_metaphlan_merged_abundance_table.txt
notebook/: Untitled.ipynb  postprocess.ipynb
script/: run_preprocess.py  run_prodigal.py
src/glyphosate_resistant/: download_ncbi.py  postprocess.py  preprocess.py  uniprot_search.py
(+107 files in other folders)
